--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "browser-image-compression": "^1.0.16",
+    "cloudinary": "^1.27.1",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
