--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "browser-image-compression": "^1.0.16",
     "cloudinary": "^1.27.1",
     "next": "12.0.1",
